Add complete bitsets for star labels projections
Co-authored-by: Paul Horn <paul.horn@neotechnology.com>
Co-authored-by: Adam Schill Collberg <adam.schill.collberg@protonmail.com>